Fixed z-index issues

--- a/src/components/css/contactStick.module.css
+++ b/src/components/css/contactStick.module.css
@@ -17,6 +17,7 @@
 
   animation-duration: 500ms;
   animation-fill-mode: forwards;
+  z-index: 1;
 }
 
 .showStick {
