--- a/src/pages/css/contact.module.css
+++ b/src/pages/css/contact.module.css
@@ -13,6 +13,10 @@
   cursor: pointer;
 }
 
+.copyMailBox:hover {
+  border-color: #64ffda;
+}
+
 .copyMailContainer {
   position: relative;
   color: transparent;
